theme/layout.scss
* {
  box-sizing: border-box;
}

body {
  overflow: hidden;
  margin: 0;
  padding: 0;
  height: 100vh;
  font-family: Roboto, "Helvetica Neue", sans-serif;
}

.monospace {
  font-family: 'Consolas', 'Liberation Mono', 'Monaco', 'Lucida Console', monospace;
}

.mat-tooltip.large-tooltip {
  font-size: 1rem;
  max-width: 420px;
}

.app-frame {
  height: 100%;
}

.scroll-container {
  overflow: auto;
}

input[type="file"].styled {
  display: none;
}

mat-toolbar.mat-toolbar mat-form-field.mat-form-field {
  font-size: 12px;

  label.mat-form-field-label {
      font-weight: bold;
  }
}

nav.mat-tab-nav-bar.wrapped div.mat-tab-links {
  flex-wrap: wrap;
}

nav.mat-tab-nav-bar.scrolled {
  white-space: nowrap;
  overflow: auto;

  div.mat-tab-links {
    display: block;
  }
}

a.mat-tab-link,
mat-tab.mat-tab {
  min-width: 80px;
}

mat-tab-group.mat-tab-group.flexible div.mat-tab-labels {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  justify-items: space-evenly;

  div.mat-tab-label {
    flex-grow: 1;
    flex-basis: auto;
    min-width: 0;
  }
}

nav.mat-tab-nav-bar.flexible div.mat-tab-links {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  justify-items: space-evenly;

  a.mat-tab-link {
    flex-grow: 1;
    flex-basis: auto;
    min-width: 0;
  }
}

button.mat-icon-button.small {
  height: 36px;
  width: 36px;
  line-height: 36px;

  mat-icon.mat-icon {
    transform: scale(0.8);
  }
}

